my name on the pubs

--- a/enrique_segura_cv.tex
+++ b/enrique_segura_cv.tex
@@ -70,7 +70,8 @@ anchorcolor = blue]{hyperref}
 }
 \end{filecontents}
 
-\usepackage[backend=biber,style=authoryear]{biblatex}
+\usepackage[backend=biber,style=authoryear,   maxcitenames=4, mincitenames=4, 
+  maxbibnames=99, minbibnames=99 ]{biblatex}
 
 \addbibresource{jobname.bib}
 \addbibresource{jobname1.bib}
