my name on pubs

--- a/enrique_segura_cv.tex
+++ b/enrique_segura_cv.tex
@@ -40,7 +40,7 @@ anchorcolor = blue]{hyperref}
 }
 
 @inproceedings{Goldrick:2015:WMM:2831296.2831336,
-    author = {Goldrick, Ciar\'{a}n Mc and Matney, Mark and Segura, Enrique and Noh, Youngtae and Gerla, Mario},
+    author = {Mc Goldrick, Ciar\'{a}n and Matney, Mark and Segura, Enrique and Noh, Youngtae and Gerla, Mario},
     title = {WaterCom: A Multilevel, Multipurpose Underwater Communications Test Platform},
     booktitle = {Proceedings of the 10th International Conference on Underwater Networks \& Systems},
     series = {WUWNET '15},
@@ -72,6 +72,11 @@ anchorcolor = blue]{hyperref}
 
 \usepackage[backend=biber,style=authoryear,   maxcitenames=4, mincitenames=4, 
   maxbibnames=99, minbibnames=99 ]{biblatex}
+
+\usepackage[ 
+  maxcitenames=4, mincitenames=4, 
+  maxbibnames=99, minbibnames=99 % <-- or some absurd number 
+]{biblatex} 
 
 \addbibresource{jobname.bib}
 \addbibresource{jobname1.bib}
