--- a/jobname.bib
+++ b/jobname.bib
@@ -21,7 +21,7 @@
 }
 
 @inproceedings{Goldrick:2015:WMM:2831296.2831336,
-    author = {Goldrick, Ciar\'{a}n Mc and Matney, Mark and Segura, Enrique and Noh, Youngtae and Gerla, Mario},
+    author = {Mc Goldrick, Ciar\'{a}n and Matney, Mark and Segura, Enrique and Noh, Youngtae and Gerla, Mario},
     title = {WaterCom: A Multilevel, Multipurpose Underwater Communications Test Platform},
     booktitle = {Proceedings of the 10th International Conference on Underwater Networks \& Systems},
     series = {WUWNET '15},
