my name on pubs/ fellowship

--- a/enrique_segura_cv.tex
+++ b/enrique_segura_cv.tex
@@ -108,7 +108,7 @@ anchorcolor = blue]{hyperref}
 
 Enrique Alberto Segura Carrillo                \hfill \href{mailto:eseguraca.6@gmail.com}{\faIcon{envelope}~eseguraca.6@gmail.com}
 \vspace{0mm}\\\vspace{0mm}%
-14022 Foothill Blvd Apt 2  \hfill \href{tel:818-310-0729}{\faIcon{phone}~8183100729}
+14022 Foothill Blvd Apt 2  \hfill \href{tel:8183100729}{\faIcon{phone}~+1 818-310-0729}%\faIcon{phone}~818-310-0729}
 \vspace{0mm}\\\vspace{0mm}%
 Sylmar, CA \ \ \ 91342\hfill %\href{https://giordonstark.com/?utm_source=cv}{https://giordonstark.com/}\\
 %\vspace{0.5mm}%
@@ -149,7 +149,7 @@ To pursue a Physics PhD in Quantum Information and Computing.
 	              % any postscript font) and just slanted in
 		      %	Computer Modern (default) font 
 
-\section{AWARDS}  
+\section{FELLOWSHIPS}  
 Graduate Equity Fellowship \hfill June 2020 \\
 NIH MBRS-RISE MS-to-PhD Fellowship \hfill June 2020 \\
 Sally Casanova Scholar \hfill May 2020 \\
