my name on pubs/ fellowship

--- a/enrique_segura_cv.tex
+++ b/enrique_segura_cv.tex
@@ -142,12 +142,12 @@ To pursue a Physics PhD in Quantum Information and Computing.
 \fi
 
 \section{EDUCATION}
-{\sl Master of Science,} Physics - California State University, Los Angeles - June 2021
-\\
-{\sl Bachelor of Science,} Physics - University of California, Los Angeles - Los Angeles, CA
-                      % \sl will be bold italic in New Century Schoolbook (or
-	              % any postscript font) and just slanted in
-		      %	Computer Modern (default) font 
+California State University, Los Angeles, Los Angeles, California \hfill June 2021\\
+M.S. Physics\\[2.5mm]
+%
+University of California, Los Angeles, Los Angeles, California \hfill June 2017 \\
+B.S. Physics\\[2.5mm]
+%
 
 \section{FELLOWSHIPS}  
 Graduate Equity Fellowship \hfill June 2020 \\
