--- a/enrique_segura_cv.tex
+++ b/enrique_segura_cv.tex
@@ -115,7 +115,7 @@ anchorcolor = blue]{hyperref}
 
 %__________________________________________________________________________________________________________________
 % Contact Information
-\section{ CONTACT \\ INFORMATION}
+\section{ \mysidestyle  CONTACT \\ INFORMATION}
 
 Enrique Alberto Segura Carrillo                \hfill \href{mailto:eseguraca.6@gmail.com}{\faIcon{envelope}~eseguraca.6@gmail.com}
 \vspace{0mm}\\\vspace{0mm}%
@@ -152,7 +152,7 @@ Sylmar, CA \ \ \ 91342\hfill %\href{https://giordonstark.com/?utm_source=cv}{htt
 To pursue a Physics PhD in Quantum Information and Computing.
 \fi
 
-\section{EDUCATION}
+\section{\mysidestyle  EDUCATION}
 California State University, Los Angeles, Los Angeles, California \hfill June 2021\\
 M.S. Physics\\[2.5mm]
 %
@@ -160,7 +160,7 @@ University of California, Los Angeles, Los Angeles, California \hfill June 2017 
 B.S. Physics\\[2.5mm]
 %
 
-\section{FELLOWSHIPS  \& AWARDS}  
+\section{\mysidestyle  FELLOWSHIPS AND AWARDS}  
 Larry Chu Scholarship \hfill July 2020 \\
 Graduate Equity Fellowship \hfill June 2020 \\
 NIH MBRS-RISE MS-to-PhD Fellowship \hfill June 2020 \\
@@ -171,14 +171,16 @@ SLAC Alonzo W. Ashley Research Fellowship \hfill November 2017 \\
 %AIChE Minority Scholarship Award     \hfill January 2013  \\
 %Questbridge College Match Finalist\hfill Fall 2011 \\0
 
-\printbibliography[title=PUBLICATIONS,heading=bibnumbered, type=inproceedings,sorting=ynt]
+\section{\mysidestyle  PUBLICATIONS}  
+\printbibliography[heading=none, type=inproceedings,sorting=ynt ]
 
-\section{RESEARCH} 
+\section{ \mysidestyle  RESEARCH} 
 {\sl Microelectronics Intern Researcher} \hfill June 2020 - September 2020 \\
 The Aerospace Corporation, El Segundo, CA
 				\begin{itemize}
 				\itemsep -2pt
 \item Will develop simulations of physical devices under radiation effects for space applications, implement physics-based model using Silvaco TCAD, and perform electrical characterization of microelectronic devices to test model's accuracy. 
+\item Mentors: Dr. Adam Bushmaker and Dr. Jennifer Taggart.
 					\end{itemize}
 					
 
@@ -187,6 +189,7 @@ California State University, Los Angeles, Los Angeles CA
 				\begin{itemize}
 					\itemsep -2pt
 					\item Working on experiment automation of Keithley nanovoltmeters, probes and oscilloscopes using LabView and Python to implement a feedback controller to measure spin to spin relaxation time using NMR techniques.
+					\item Mentor: Prof. Oscar Bernal.
 					\end{itemize}
 
 
@@ -213,6 +216,7 @@ California State University, Los Angeles, Los Angeles CA
 					\item Algorithm's feedback enables experiments to run 24/7, dramatically improving from the previous thermally-imposed experimental time-window of 10 pm - 8 am.
 					\item Algorithm's control allows uninterrupted experimental runs removing the need for a time-consuming manual alignment every 30 minutes. 
 					\item Presented project's results to LCLS team at SLAC to showcase its potential as a suitable feedback method for LCLS's beamline.
+					\item Mentors: Dr. Mark Hogan and Dr. Brendan O'Shea.
 				\end{itemize}
 				
 {\sl Undergraduate Researcher} \hfill Summer 2015 - Summer 2017 \\
@@ -223,9 +227,10 @@ California State University, Los Angeles, Los Angeles CA
                 \item Prepared embedded hardware for experiments by developing parallel compilation of NRL's MPTCP Linux Kernel on Raspberry Pis.
                 \item Executed data acquisition of vehicular and underwater wireless experiments.
                 \item Implemented data analysis of experimental data to quantify network traffic trade-offs between TCP vs MPTCP.
+                \item Mentors: Dr. Jorge Mena, Prof. Ciaran Mc Goldrick and Prof. Mario Gerla.
                 \end{itemize}  
                 
-\section{ADDITIONAL \\ TRAINING}
+\section{\mysidestyle  ADDITIONAL \\ TRAINING}
  
 { Princeton Plasma Physics Laboratory
 Graduate Summer School }\hfill  Summer 2019\\
@@ -233,9 +238,10 @@ Graduate Summer School }\hfill  Summer 2019\\
  { 
 SLAC Machine Learning Applications for Particle Accelerators Mini-Workshop} \hfill            Spring 2018 \\        
 
-\printbibliography[title=POSTER, type=misc, heading=bibnumbered]     
+\section{\mysidestyle  POSTER}
+\printbibliography[heading=none, type=misc]     
 
-\section{ TEACHING}  
+\section{\mysidestyle  TEACHING}  
 
 {\sl Graduate Assistant} \hfill Fall 2019 \\
 California State University, Los Angeles, Los Angeles, CA
@@ -273,7 +279,7 @@ Hispanic Heritage Foundation,   San Fernando, CA
 \end{itemize}
 \fi
 
-\section{SKILLS}  Python, LabVIEW, MATLAB, Linux, Raspberry Pi 3, Arduino, Fortran, Zemax, Cirq, Qiskit, Mathematica.
+\section{\mysidestyle  SKILLS}  Python, LabVIEW, MATLAB, Linux, Raspberry Pi 3, Arduino, Fortran, Zemax, Cirq, Qiskit, Mathematica.
 
 
 \end{resume}
