aps bridge fellow

--- a/enrique_segura_cv.tex
+++ b/enrique_segura_cv.tex
@@ -166,6 +166,7 @@ Graduate Equity Fellowship \hfill June 2020 \\
 NIH MBRS-RISE MS-to-PhD Fellowship \hfill June 2020 \\
 Sally Casanova Scholar \hfill May 2020 \\
 %HSF Scholarship Finalist \hfill March 2020 \\
+American Physical Society Bridge Fellow \hfill August 2019 \\
 SLAC Alonzo W. Ashley Research Fellowship \hfill November 2017 \\
 %HSF Procter \& Gamble Orgullosa Scholarship  \hfill January 2013 \\
 %AIChE Minority Scholarship Award     \hfill January 2013  \\
@@ -179,7 +180,7 @@ SLAC Alonzo W. Ashley Research Fellowship \hfill November 2017 \\
 The Aerospace Corporation, El Segundo, CA
 				\begin{itemize}
 				\itemsep -2pt
-\item Will develop simulations of physical devices under radiation effects for space applications, implement physics-based model using Silvaco TCAD, and perform electrical characterization of microelectronic devices to test model's accuracy. 
+\item Will develop simulations of MOSFETs under radiation effects for space applications, implement physics-based model using Silvaco TCAD, and perform electrical characterization of microelectronic devices to test model's accuracy. 
 \item Mentors: Dr. Adam Bushmaker and Dr. Jennifer Taggart.
 					\end{itemize}
 					
@@ -227,6 +228,7 @@ California State University, Los Angeles, Los Angeles CA
                 \item Prepared embedded hardware for experiments by developing parallel compilation of NRL's MPTCP Linux Kernel on Raspberry Pis.
                 \item Executed data acquisition of vehicular and underwater wireless experiments.
                 \item Implemented data analysis of experimental data to quantify network traffic trade-offs between TCP vs MPTCP.
+                \item This research was supported by NSF Grant 1205757. 
                 \item Mentors: Dr. Jorge Mena, Prof. Ciaran Mc Goldrick and Prof. Mario Gerla.
                 \end{itemize}  
                 
@@ -279,7 +281,7 @@ Hispanic Heritage Foundation,   San Fernando, CA
 \end{itemize}
 \fi
 
-\section{\mysidestyle  SKILLS}  Python, LabVIEW, MATLAB, Linux, Raspberry Pi 3, Arduino, Fortran, Zemax, Cirq, Qiskit, Mathematica.
+\section{\mysidestyle  PROGRAMMING}  Python, LabVIEW, MATLAB, Linux, Raspberry Pi 3, Arduino, Fortran, Zemax, Cirq, Qiskit, Mathematica.
 
 
 \end{resume}
