aps bridge fellow-1

--- a/enrique_segura_cv.tex
+++ b/enrique_segura_cv.tex
@@ -160,7 +160,7 @@ University of California, Los Angeles, Los Angeles, California \hfill June 2017 
 B.S. Physics\\[2.5mm]
 %
 
-\section{\mysidestyle  FELLOWSHIPS AND AWARDS}  
+\section{\mysidestyle  FELLOWSHIPS  \\ AND AWARDS}  
 Larry Chu Scholarship \hfill July 2020 \\
 Graduate Equity Fellowship \hfill June 2020 \\
 NIH MBRS-RISE MS-to-PhD Fellowship \hfill June 2020 \\
@@ -170,10 +170,7 @@ American Physical Society Bridge Fellow \hfill August 2019 \\
 SLAC Alonzo W. Ashley Research Fellowship \hfill November 2017 \\
 %HSF Procter \& Gamble Orgullosa Scholarship  \hfill January 2013 \\
 %AIChE Minority Scholarship Award     \hfill January 2013  \\
-%Questbridge College Match Finalist\hfill Fall 2011 \\0
-
-\section{\mysidestyle  PUBLICATIONS}  
-\printbibliography[heading=none, type=inproceedings,sorting=ynt ]
+%Questbridge College Match Finalist\hfill Fall 2011 \\
 
 \section{ \mysidestyle  RESEARCH} 
 {\sl Microelectronics Intern Researcher} \hfill June 2020 - September 2020 \\
@@ -231,14 +228,9 @@ California State University, Los Angeles, Los Angeles CA
                 \item This research was supported by NSF Grant 1205757. 
                 \item Mentors: Dr. Jorge Mena, Prof. Ciaran Mc Goldrick and Prof. Mario Gerla.
                 \end{itemize}  
-                
-\section{\mysidestyle  ADDITIONAL \\ TRAINING}
- 
-{ Princeton Plasma Physics Laboratory
-Graduate Summer School }\hfill  Summer 2019\\
-{SLAC Summer Institute }\hfill  Summer 2018 \\
- { 
-SLAC Machine Learning Applications for Particle Accelerators Mini-Workshop} \hfill            Spring 2018 \\        
+
+\section{\mysidestyle  PUBLICATIONS}  
+\printbibliography[heading=none, type=inproceedings,sorting=ynt ]
 
 \section{\mysidestyle  POSTER}
 \printbibliography[heading=none, type=misc]     
@@ -282,6 +274,15 @@ Hispanic Heritage Foundation,   San Fernando, CA
 \fi
 
 \section{\mysidestyle  PROGRAMMING}  Python, LabVIEW, MATLAB, Linux, Raspberry Pi 3, Arduino, Fortran, Zemax, Cirq, Qiskit, Mathematica.
+
+           
+\section{\mysidestyle  ADDITIONAL \\ TRAINING}
+ 
+{ Princeton Plasma Physics Laboratory
+Graduate Summer School }\hfill  Summer 2019\\
+{SLAC Summer Institute }\hfill  Summer 2018 \\
+ { 
+SLAC Machine Learning Applications for Particle Accelerators Mini-Workshop} \hfill            Spring 2018 \\        
 
 
 \end{resume}
